// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Mock data Describes samples 1`] = `
Array [
  Object {
    "createdAt": "2021-12-07 17:36:27.773+00",
    "experimentId": Object {
      "createdAt": "0000-00-00T00:00:00.000Z",
      "description": "Mock experiment 0",
      "id": "testae48e318dab9a1bd0bexperiment-0",
      "metadataKeys": Array [],
      "name": "Test Experiment-0",
      "notifyByEmail": true,
      "pipelineVersion": 1,
      "pipelines": Object {
        "gem2s": Object {
          "executionArn": "arn:aws:states:eu-west-1:000000000000:execution:biomage-gem2s-development-mock997586f1bae0a6d5c5beed65663ec1519de4:5f273383-f093-4112-95b0-d76db896test",
          "shouldRerun": true,
          "stateMachineArn": "arn:aws:states:eu-west-1:000000000000:stateMachine:biomage-gem2s-development-mock997586f1bae0a6d5c5beed65663ec151test",
        },
        "qc": Object {
          "executionArn": "arn:aws:states:eu-west-1:000000000000:execution:biomage-qc-development-mock997586f1bae0a6d5c5beed65663ec1519de4:422493f3-68a0-4ecb-8b17-0e8cd7a3test",
          "shouldRerun": null,
          "stateMachineArn": "arn:aws:states:eu-west-1:000000000000:stateMachine:biomage-qc-development-mock997586f1bae0a6d5c5beed65663ec151test",
        },
      },
      "samplesOrder": Array [
        "test9188-d682-test-mock-cb6d644cmock-0",
        "test9188-d682-test-mock-cb6d644cmock-1",
        "test9188-d682-test-mock-cb6d644cmock-2",
      ],
      "updatedAt": "0000-00-00T00:00:00.000Z",
    },
    "files": Object {
      "barcodes10X": Object {
        "s3Path": "testcfd8122f-25af-4f1a-a306-3268d44ed402",
        "sampleFileType": "barcodes10x",
        "size": 100,
        "uploadStatus": "uploaded",
      },
      "features10X": Object {
        "s3Path": "testcfd8122f-25af-4f1a-a306-3268d44ed403",
        "sampleFileType": "features10x",
        "size": 100,
        "uploadStatus": "uploaded",
      },
      "matrix10X": Object {
        "s3Path": "testcfd8122f-25af-4f1a-a306-3268d44ed401",
        "sampleFileType": "matrix10x",
        "size": 1000,
        "uploadStatus": "uploaded",
      },
    },
    "id": "test9188-d682-test-mock-cb6d644cmock-0",
    "metadata": Object {
      "age": "BL",
      "timePoint": "BL",
    },
    "name": "Mock sample 0",
    "options": Object {},
    "sampleTechnology": "10x",
    "updatedAt": "2021-12-07 17:38:42.036+00",
  },
  Object {
    "createdAt": "2021-12-07 17:36:27.773+00",
    "experimentId": Object {
      "createdAt": "0000-00-00T00:00:00.000Z",
      "description": "Mock experiment 0",
      "id": "testae48e318dab9a1bd0bexperiment-0",
      "metadataKeys": Array [],
      "name": "Test Experiment-0",
      "notifyByEmail": true,
      "pipelineVersion": 1,
      "pipelines": Object {
        "gem2s": Object {
          "executionArn": "arn:aws:states:eu-west-1:000000000000:execution:biomage-gem2s-development-mock997586f1bae0a6d5c5beed65663ec1519de4:5f273383-f093-4112-95b0-d76db896test",
          "shouldRerun": true,
          "stateMachineArn": "arn:aws:states:eu-west-1:000000000000:stateMachine:biomage-gem2s-development-mock997586f1bae0a6d5c5beed65663ec151test",
        },
        "qc": Object {
          "executionArn": "arn:aws:states:eu-west-1:000000000000:execution:biomage-qc-development-mock997586f1bae0a6d5c5beed65663ec1519de4:422493f3-68a0-4ecb-8b17-0e8cd7a3test",
          "shouldRerun": null,
          "stateMachineArn": "arn:aws:states:eu-west-1:000000000000:stateMachine:biomage-qc-development-mock997586f1bae0a6d5c5beed65663ec151test",
        },
      },
      "samplesOrder": Array [
        "test9188-d682-test-mock-cb6d644cmock-0",
        "test9188-d682-test-mock-cb6d644cmock-1",
        "test9188-d682-test-mock-cb6d644cmock-2",
      ],
      "updatedAt": "0000-00-00T00:00:00.000Z",
    },
    "files": Object {
      "barcodes10X": Object {
        "s3Path": "testcfd8122f-25af-4f1a-a306-3268d44ed402",
        "sampleFileType": "barcodes10x",
        "size": 100,
        "uploadStatus": "uploaded",
      },
      "features10X": Object {
        "s3Path": "testcfd8122f-25af-4f1a-a306-3268d44ed403",
        "sampleFileType": "features10x",
        "size": 100,
        "uploadStatus": "uploaded",
      },
      "matrix10X": Object {
        "s3Path": "testcfd8122f-25af-4f1a-a306-3268d44ed401",
        "sampleFileType": "matrix10x",
        "size": 1000,
        "uploadStatus": "uploaded",
      },
    },
    "id": "test9188-d682-test-mock-cb6d644cmock-1",
    "metadata": Object {
      "age": "BL",
      "timePoint": "BL",
    },
    "name": "Mock sample 1",
    "options": Object {},
    "sampleTechnology": "10x",
    "updatedAt": "2021-12-07 17:38:42.036+00",
  },
  Object {
    "createdAt": "2021-12-07 17:36:27.773+00",
    "experimentId": Object {
      "createdAt": "0000-00-00T00:00:00.000Z",
      "description": "Mock experiment 0",
      "id": "testae48e318dab9a1bd0bexperiment-0",
      "metadataKeys": Array [],
      "name": "Test Experiment-0",
      "notifyByEmail": true,
      "pipelineVersion": 1,
      "pipelines": Object {
        "gem2s": Object {
          "executionArn": "arn:aws:states:eu-west-1:000000000000:execution:biomage-gem2s-development-mock997586f1bae0a6d5c5beed65663ec1519de4:5f273383-f093-4112-95b0-d76db896test",
          "shouldRerun": true,
          "stateMachineArn": "arn:aws:states:eu-west-1:000000000000:stateMachine:biomage-gem2s-development-mock997586f1bae0a6d5c5beed65663ec151test",
        },
        "qc": Object {
          "executionArn": "arn:aws:states:eu-west-1:000000000000:execution:biomage-qc-development-mock997586f1bae0a6d5c5beed65663ec1519de4:422493f3-68a0-4ecb-8b17-0e8cd7a3test",
          "shouldRerun": null,
          "stateMachineArn": "arn:aws:states:eu-west-1:000000000000:stateMachine:biomage-qc-development-mock997586f1bae0a6d5c5beed65663ec151test",
        },
      },
      "samplesOrder": Array [
        "test9188-d682-test-mock-cb6d644cmock-0",
        "test9188-d682-test-mock-cb6d644cmock-1",
        "test9188-d682-test-mock-cb6d644cmock-2",
      ],
      "updatedAt": "0000-00-00T00:00:00.000Z",
    },
    "files": Object {
      "barcodes10X": Object {
        "s3Path": "testcfd8122f-25af-4f1a-a306-3268d44ed402",
        "sampleFileType": "barcodes10x",
        "size": 100,
        "uploadStatus": "uploaded",
      },
      "features10X": Object {
        "s3Path": "testcfd8122f-25af-4f1a-a306-3268d44ed403",
        "sampleFileType": "features10x",
        "size": 100,
        "uploadStatus": "uploaded",
      },
      "matrix10X": Object {
        "s3Path": "testcfd8122f-25af-4f1a-a306-3268d44ed401",
        "sampleFileType": "matrix10x",
        "size": 1000,
        "uploadStatus": "uploaded",
      },
    },
    "id": "test9188-d682-test-mock-cb6d644cmock-2",
    "metadata": Object {
      "age": "BL",
      "timePoint": "BL",
    },
    "name": "Mock sample 2",
    "options": Object {},
    "sampleTechnology": "10x",
    "updatedAt": "2021-12-07 17:38:42.036+00",
  },
]
`;

exports[`Mock response data Describes experiment response 1`] = `
Array [
  Object {
    "createdAt": "0000-00-00T00:00:00.000Z",
    "description": "Mock experiment 0",
    "id": "testae48e318dab9a1bd0bexperiment-0",
    "metadataKeys": Array [],
    "name": "Test Experiment-0",
    "notifyByEmail": true,
    "pipelineVersion": 1,
    "pipelines": Object {
      "gem2s": Object {
        "executionArn": "arn:aws:states:eu-west-1:000000000000:execution:biomage-gem2s-development-mock997586f1bae0a6d5c5beed65663ec1519de4:5f273383-f093-4112-95b0-d76db896test",
        "shouldRerun": true,
        "stateMachineArn": "arn:aws:states:eu-west-1:000000000000:stateMachine:biomage-gem2s-development-mock997586f1bae0a6d5c5beed65663ec151test",
      },
      "qc": Object {
        "executionArn": "arn:aws:states:eu-west-1:000000000000:execution:biomage-qc-development-mock997586f1bae0a6d5c5beed65663ec1519de4:422493f3-68a0-4ecb-8b17-0e8cd7a3test",
        "shouldRerun": null,
        "stateMachineArn": "arn:aws:states:eu-west-1:000000000000:stateMachine:biomage-qc-development-mock997586f1bae0a6d5c5beed65663ec151test",
      },
    },
    "samplesOrder": Array [
      "test9188-d682-test-mock-cb6d644cmock-0",
      "test9188-d682-test-mock-cb6d644cmock-1",
      "test9188-d682-test-mock-cb6d644cmock-2",
    ],
    "updatedAt": "0000-00-00T00:00:00.000Z",
  },
  Object {
    "createdAt": "0000-00-00T00:00:00.000Z",
    "description": "Mock experiment 1",
    "id": "testae48e318dab9a1bd0bexperiment-1",
    "metadataKeys": Array [],
    "name": "Test Experiment-1",
    "notifyByEmail": true,
    "pipelineVersion": 1,
    "pipelines": Object {
      "gem2s": Object {
        "executionArn": "arn:aws:states:eu-west-1:000000000000:execution:biomage-gem2s-development-mock997586f1bae0a6d5c5beed65663ec1519de4:5f273383-f093-4112-95b0-d76db896test",
        "shouldRerun": true,
        "stateMachineArn": "arn:aws:states:eu-west-1:000000000000:stateMachine:biomage-gem2s-development-mock997586f1bae0a6d5c5beed65663ec151test",
      },
      "qc": Object {
        "executionArn": "arn:aws:states:eu-west-1:000000000000:execution:biomage-qc-development-mock997586f1bae0a6d5c5beed65663ec1519de4:422493f3-68a0-4ecb-8b17-0e8cd7a3test",
        "shouldRerun": null,
        "stateMachineArn": "arn:aws:states:eu-west-1:000000000000:stateMachine:biomage-qc-development-mock997586f1bae0a6d5c5beed65663ec151test",
      },
    },
    "samplesOrder": Array [],
    "updatedAt": "0000-00-00T00:00:00.000Z",
  },
]
`;

exports[`Mock response data Describes samples response 1`] = `
Array [
  Array [
    Object {
      "createdAt": "2021-12-07 17:36:27.773+00",
      "experimentId": Object {
        "createdAt": "0000-00-00T00:00:00.000Z",
        "description": "Mock experiment 0",
        "id": "testae48e318dab9a1bd0bexperiment-0",
        "metadataKeys": Array [],
        "name": "Test Experiment-0",
        "notifyByEmail": true,
        "pipelineVersion": 1,
        "pipelines": Object {
          "gem2s": Object {
            "executionArn": "arn:aws:states:eu-west-1:000000000000:execution:biomage-gem2s-development-mock997586f1bae0a6d5c5beed65663ec1519de4:5f273383-f093-4112-95b0-d76db896test",
            "shouldRerun": true,
            "stateMachineArn": "arn:aws:states:eu-west-1:000000000000:stateMachine:biomage-gem2s-development-mock997586f1bae0a6d5c5beed65663ec151test",
          },
          "qc": Object {
            "executionArn": "arn:aws:states:eu-west-1:000000000000:execution:biomage-qc-development-mock997586f1bae0a6d5c5beed65663ec1519de4:422493f3-68a0-4ecb-8b17-0e8cd7a3test",
            "shouldRerun": null,
            "stateMachineArn": "arn:aws:states:eu-west-1:000000000000:stateMachine:biomage-qc-development-mock997586f1bae0a6d5c5beed65663ec151test",
          },
        },
        "samplesOrder": Array [
          "test9188-d682-test-mock-cb6d644cmock-0",
          "test9188-d682-test-mock-cb6d644cmock-1",
          "test9188-d682-test-mock-cb6d644cmock-2",
        ],
        "updatedAt": "0000-00-00T00:00:00.000Z",
      },
      "files": Object {
        "barcodes10X": Object {
          "s3Path": "testcfd8122f-25af-4f1a-a306-3268d44ed402",
          "sampleFileType": "barcodes10x",
          "size": 100,
          "uploadStatus": "uploaded",
        },
        "features10X": Object {
          "s3Path": "testcfd8122f-25af-4f1a-a306-3268d44ed403",
          "sampleFileType": "features10x",
          "size": 100,
          "uploadStatus": "uploaded",
        },
        "matrix10X": Object {
          "s3Path": "testcfd8122f-25af-4f1a-a306-3268d44ed401",
          "sampleFileType": "matrix10x",
          "size": 1000,
          "uploadStatus": "uploaded",
        },
      },
      "id": "test9188-d682-test-mock-cb6d644cmock-0",
      "metadata": Object {
        "age": "BL",
        "timePoint": "BL",
      },
      "name": "Mock sample 0",
      "options": Object {},
      "sampleTechnology": "10x",
      "updatedAt": "2021-12-07 17:38:42.036+00",
    },
    Object {
      "createdAt": "2021-12-07 17:36:27.773+00",
      "experimentId": Object {
        "createdAt": "0000-00-00T00:00:00.000Z",
        "description": "Mock experiment 0",
        "id": "testae48e318dab9a1bd0bexperiment-0",
        "metadataKeys": Array [],
        "name": "Test Experiment-0",
        "notifyByEmail": true,
        "pipelineVersion": 1,
        "pipelines": Object {
          "gem2s": Object {
            "executionArn": "arn:aws:states:eu-west-1:000000000000:execution:biomage-gem2s-development-mock997586f1bae0a6d5c5beed65663ec1519de4:5f273383-f093-4112-95b0-d76db896test",
            "shouldRerun": true,
            "stateMachineArn": "arn:aws:states:eu-west-1:000000000000:stateMachine:biomage-gem2s-development-mock997586f1bae0a6d5c5beed65663ec151test",
          },
          "qc": Object {
            "executionArn": "arn:aws:states:eu-west-1:000000000000:execution:biomage-qc-development-mock997586f1bae0a6d5c5beed65663ec1519de4:422493f3-68a0-4ecb-8b17-0e8cd7a3test",
            "shouldRerun": null,
            "stateMachineArn": "arn:aws:states:eu-west-1:000000000000:stateMachine:biomage-qc-development-mock997586f1bae0a6d5c5beed65663ec151test",
          },
        },
        "samplesOrder": Array [
          "test9188-d682-test-mock-cb6d644cmock-0",
          "test9188-d682-test-mock-cb6d644cmock-1",
          "test9188-d682-test-mock-cb6d644cmock-2",
        ],
        "updatedAt": "0000-00-00T00:00:00.000Z",
      },
      "files": Object {
        "barcodes10X": Object {
          "s3Path": "testcfd8122f-25af-4f1a-a306-3268d44ed402",
          "sampleFileType": "barcodes10x",
          "size": 100,
          "uploadStatus": "uploaded",
        },
        "features10X": Object {
          "s3Path": "testcfd8122f-25af-4f1a-a306-3268d44ed403",
          "sampleFileType": "features10x",
          "size": 100,
          "uploadStatus": "uploaded",
        },
        "matrix10X": Object {
          "s3Path": "testcfd8122f-25af-4f1a-a306-3268d44ed401",
          "sampleFileType": "matrix10x",
          "size": 1000,
          "uploadStatus": "uploaded",
        },
      },
      "id": "test9188-d682-test-mock-cb6d644cmock-1",
      "metadata": Object {
        "age": "BL",
        "timePoint": "BL",
      },
      "name": "Mock sample 1",
      "options": Object {},
      "sampleTechnology": "10x",
      "updatedAt": "2021-12-07 17:38:42.036+00",
    },
    Object {
      "createdAt": "2021-12-07 17:36:27.773+00",
      "experimentId": Object {
        "createdAt": "0000-00-00T00:00:00.000Z",
        "description": "Mock experiment 0",
        "id": "testae48e318dab9a1bd0bexperiment-0",
        "metadataKeys": Array [],
        "name": "Test Experiment-0",
        "notifyByEmail": true,
        "pipelineVersion": 1,
        "pipelines": Object {
          "gem2s": Object {
            "executionArn": "arn:aws:states:eu-west-1:000000000000:execution:biomage-gem2s-development-mock997586f1bae0a6d5c5beed65663ec1519de4:5f273383-f093-4112-95b0-d76db896test",
            "shouldRerun": true,
            "stateMachineArn": "arn:aws:states:eu-west-1:000000000000:stateMachine:biomage-gem2s-development-mock997586f1bae0a6d5c5beed65663ec151test",
          },
          "qc": Object {
            "executionArn": "arn:aws:states:eu-west-1:000000000000:execution:biomage-qc-development-mock997586f1bae0a6d5c5beed65663ec1519de4:422493f3-68a0-4ecb-8b17-0e8cd7a3test",
            "shouldRerun": null,
            "stateMachineArn": "arn:aws:states:eu-west-1:000000000000:stateMachine:biomage-qc-development-mock997586f1bae0a6d5c5beed65663ec151test",
          },
        },
        "samplesOrder": Array [
          "test9188-d682-test-mock-cb6d644cmock-0",
          "test9188-d682-test-mock-cb6d644cmock-1",
          "test9188-d682-test-mock-cb6d644cmock-2",
        ],
        "updatedAt": "0000-00-00T00:00:00.000Z",
      },
      "files": Object {
        "barcodes10X": Object {
          "s3Path": "testcfd8122f-25af-4f1a-a306-3268d44ed402",
          "sampleFileType": "barcodes10x",
          "size": 100,
          "uploadStatus": "uploaded",
        },
        "features10X": Object {
          "s3Path": "testcfd8122f-25af-4f1a-a306-3268d44ed403",
          "sampleFileType": "features10x",
          "size": 100,
          "uploadStatus": "uploaded",
        },
        "matrix10X": Object {
          "s3Path": "testcfd8122f-25af-4f1a-a306-3268d44ed401",
          "sampleFileType": "matrix10x",
          "size": 1000,
          "uploadStatus": "uploaded",
        },
      },
      "id": "test9188-d682-test-mock-cb6d644cmock-2",
      "metadata": Object {
        "age": "BL",
        "timePoint": "BL",
      },
      "name": "Mock sample 2",
      "options": Object {},
      "sampleTechnology": "10x",
      "updatedAt": "2021-12-07 17:38:42.036+00",
    },
  ],
]
`;
